--- a/src/components/css/Slider.css
+++ b/src/components/css/Slider.css
@@ -201,3 +201,13 @@ font-family: 'Poppins', sans-serif;
         font-family: 'Poppins', sans-serif;
     }
 }
+@media (max-width:425px){
+    .card .card-image {
+    position: absolute;
+    top: 188px;
+    left: -194px;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+}
+}
